# funding-service-design-frontend

./: .bash_profile  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Dockerfile_Designer  Dockerfile_base  Dockerfile_frontend  README.md  app.dockerfile  app.py  babel.cfg  base-requirements-dev.txt  base-requirements.txt  build.py  build.sh  compose.override.yml  docker-compose.yml  index.html  manifest-dev.yml  manifest-form-runner.yml  manifest-test.yml  manifest.yml  messages.pot  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements-dev.txt_u  requirements.in  requirements.txt  requirements.txt2  tasks.py
.devcontainer/: devcontainer.json
.devcontainer/python-container/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: .deploy.yml.swp  .pre-commit-config.yaml  build-deploy-forms.yml  codeql-analysis.yml  copilot.yml  copilot_deploy.yml  deploy-branch-to-space.yml  deploy-designer.yml  deploy.yml  environment.yml  govcloud.yml  increment-tag.yml  manual_performance_test.yml  package.yml  python_deploy.yml  s3-zip.yaml  tag-to-release.yaml  tag-to-release.yml  xforms_builder.yml
app/: __init__.py  build.py  config.py  constants.py  create_app.py  data.py  enums.py  error_routes.py  filters.py  helpers.py  routes.py
app/data_models/: eligibility criteria.py  eligibility_criteria.py  fund.py
app/default/: account_routes.py  application_routes.py  content_routes.py  data.py  eligibility_routes.py  error_routes.py  feedback_routes.py  helpers.py  question_bank.py  routes.py
app/forms/: continue_application.py  eligibility_questions.py  feedback.py  feedback_forms.py  forms.json  formzy.py  research.py  routes.py  views.py
app/models/: application.py  application_display_mapping.py  application_summary.py  continue_application.py  eligibility_questions.py  feedback.py  fund.py  helpers.py  language.py  round.py  statuses.py  tasklist.py
app/security/: decorator.py  utils.py
app/templates/: 400.html  404.html  500.html  accessibility-statement.html  accessibility_statement.html  application_submitted.html  application_unknown.html  base.html  cof-r2w2-all-questions.html  cof_r2_all_questions.html  cof_r2w2_all_questions.html  cof_r3_all_questions.html  contact_us.html  continue_application.html  cookie_policy.html  cyp_r1_all_questions.html  dashboard.html  dashboard_all.html  dashboard_single_fund.html  dashboard_single_fund_on_eligibility_check.html  dpif_r2_all_questions.html  eligibility_result.html  eligible.html  end_of_application_feedback_page_1.html  end_of_application_feedback_page_2.html  end_of_application_feedback_page_3.html  end_of_application_feedback_page_4.html  end_of_application_survey.html  eoi_submitted.html  example_tasklist_submit.html  feedback_generic_survey.html  footer.html  fund_start_page.html  funding_amount.html  head.html  header.html  index.html  (+12 more)
config/: __init__.py
docs/: linked_services.md  pipelines.md  prereqs.md  run.md  setup.md  testing.md  translations.md
formuli/: forms.json  formuli.py  routes.py
json-forms/: BaselineApplicationQuestions.json  baseline-questions.json
scripts/: form_refactor_util.py
src/: Dockerfile  requirements.in  requirements.txt
tests/: config.py  conftest.py  route_testing_conf.py  test_accessibility.py  test_all_questions.py  test_application_form.py  test_application_summary.py  test_build_assessment_config.py  test_build_forms.py  test_content_routes.py  test_continue_application.py  test_dashboard.py  test_data.py  test_default_fund_round.py  test_eligibility_routes.py  test_error_routes.py  test_filters.py  test_form_refactor_util.py  test_fund_round_caching.py  test_fund_round_notification.py  test_initialisation.py  test_json_field_ids.py  test_lru_cache.py  test_page_content.py  test_pass.py  test_research_survey.py  test_routes.py  test_security_files.py  test_start_page.py  test_tasklist.py  test_tasks.py  test_unauthorised_access.py  test_user_validation.py  utils.py
(+220 files in other folders)
